--- a/app/src/main/res/layout/item_forecast.xml
+++ b/app/src/main/res/layout/item_forecast.xml
@@ -43,10 +43,8 @@
             android:textSize="20sp"
             tools:text="24"
             app:layout_constraintRight_toLeftOf="@+id/temperatureUnits"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/description"
+            android:layout_marginRight="-1dp" />
 
         <TextView
             android:id="@+id/date"
