--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -17,31 +17,29 @@
             android:id="@+id/lastUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            tools:text="20.07.17 02:30 AM"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            tools:text="20.07.17 02:30 AM"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="0dp" />
 
         <ImageView
             android:id="@+id/weatherIcon"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="0dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/temperature"
             app:layout_constraintDimensionRatio="w,1:1"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toRightOf="@+id/temperatureUnits"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/temperature"
-            app:layout_constraintVertical_bias="0.571"
             app:srcCompat="@drawable/ic_weather_sunny"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/lastUpdate"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/guideline1"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent" />
 
 
         <TextView
@@ -50,31 +48,34 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="10dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/temperature"
             tools:layout_conversion_absoluteHeight="16dp"
             tools:layout_conversion_absoluteWidth="16dp"
             tools:layout_conversion_absoluteX="125dp"
             tools:layout_conversion_absoluteY="33dp"
-            tools:text="Clouds and clouds" />
+            tools:text="Clouds and clouds"
+            app:layout_constraintHorizontal_bias="0.513"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />
 
         <TextView
             android:id="@+id/temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginLeft="24dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Display3"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lastUpdate"
             tools:layout_conversion_absoluteHeight="16dp"
             tools:layout_conversion_absoluteWidth="16dp"
             tools:layout_conversion_absoluteX="125dp"
             tools:layout_conversion_absoluteY="49dp"
-            tools:text="40" />
+            tools:text="40"
+            app:layout_constraintTop_toTopOf="@+id/weatherIcon"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/weatherIcon"
+            android:layout_marginBottom="8dp" />
 
 
         <TextView
@@ -82,7 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Display2"
             app:layout_constraintLeft_toRightOf="@+id/temperature"
             app:layout_constraintTop_toTopOf="@+id/temperature"
@@ -93,7 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/description"
             app:srcCompat="@drawable/ic_weather_pressure" />
@@ -142,7 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintLeft_toLeftOf="@+id/guideline1"
             app:layout_constraintTop_toBottomOf="@+id/description"
             app:srcCompat="@drawable/ic_weather_wind" />
