--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#212121</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorPrimaryLight">#616161</color>
+    <color name="colorPrimary">@color/primary_material_dark</color>
+    <color name="colorPrimaryDark">@color/colorYandexBlack</color>
     <color name="colorAccent">@color/colorYandexYellow</color>
     <color name="colorViewPagerDots">@android:color/primary_text_dark</color>
     <color name="tintIcons">@android:color/primary_text_dark</color>
