--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">@color/colorYandexYellow</color>
     <color name="colorPrimaryDark">@color/colorYandexBlack</color>
     <color name="colorAccent">@color/colorYandexRed</color>
-    <color name="colorViewPagerDots">@android:color/primary_text_light</color>
+    <color name="colorViewPagerDots">@color/colorYandexYellow</color>
     <color name="tintIcons">@android:color/primary_text_light</color>
 </resources>
