--- a/app/src/main/res/layout/item_forecast.xml
+++ b/app/src/main/res/layout/item_forecast.xml
@@ -12,29 +12,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/weatherIcon"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/ic_weather_sunny" />
-
         <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="8dp"
             android:padding="0dp"
             android:textSize="24sp"
-            app:layout_constraintLeft_toRightOf="@+id/weatherIcon"
-            app:layout_constraintTop_toBottomOf="@+id/date"
-            tools:text="Weather" />
+            tools:text="Weather"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.6"
+            app:layout_constraintLeft_toRightOf="@+id/date"
+            android:layout_marginLeft="8dp" />
 
         <TextView
             android:id="@+id/temperature"
@@ -42,31 +33,38 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             tools:text="24"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
             app:layout_constraintRight_toLeftOf="@+id/temperatureUnits"
-            app:layout_constraintBaseline_toBaselineOf="@+id/description"
-            android:layout_marginRight="-1dp" />
+            android:layout_marginRight="0dp"
+            app:layout_constraintVertical_bias="0.6" />
 
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="24sp"
+            tools:text="Date"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Date" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
 
         <TextView
             android:id="@+id/temperatureUnits"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            app:layout_constraintTop_toTopOf="@+id/temperature"
             tools:text="@string/pref_temp_units_celsius_sign"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
